{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 21,
  "lineage": "b49729d2-2d34-716f-a765-06abd40db357",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devopsshack_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:630471054272:internet-gateway/igw-09a1d9436ab7e4728",
            "id": "igw-09a1d9436ab7e4728",
            "owner_id": "630471054272",
            "region": "ap-south-1",
            "tags": {
              "Name": "devopsshack-igw"
            },
            "tags_all": {
              "Name": "devopsshack-igw"
            },
            "vpc_id": "vpc-05002e50491e66495"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devopsshack_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:630471054272:route-table/rtb-0f9be2d03c52a870d",
            "id": "rtb-0f9be2d03c52a870d",
            "owner_id": "630471054272",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a1d9436ab7e4728",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devopsshack-route-table"
            },
            "tags_all": {
              "Name": "devopsshack-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05002e50491e66495"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630471054272",
            "id": "rtb-0f9be2d03c52a870d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085b66788dc95e1d5",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f9be2d03c52a870d",
            "subnet_id": "subnet-05e8b0e64e72c589f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053864dbf99122fce",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f9be2d03c52a870d",
            "subnet_id": "subnet-0c293e7f95d3256c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:630471054272:security-group/sg-09766dbb7fac1a45c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09766dbb7fac1a45c",
            "ingress": [],
            "name": "terraform-20260102023435910600000001",
            "name_prefix": "terraform-",
            "owner_id": "630471054272",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-cluster-sg"
            },
            "tags_all": {
              "Name": "devopsshack-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05002e50491e66495"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630471054272",
            "id": "sg-09766dbb7fac1a45c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:630471054272:security-group/sg-01a76c5eb31231f41",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a76c5eb31231f41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20260102023435913900000002",
            "name_prefix": "terraform-",
            "owner_id": "630471054272",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-node-sg"
            },
            "tags_all": {
              "Name": "devopsshack-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05002e50491e66495"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630471054272",
            "id": "sg-01a76c5eb31231f41",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devopsshack_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:630471054272:subnet/subnet-05e8b0e64e72c589f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e8b0e64e72c589f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630471054272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devopsshack-subnet-0"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-0"
            },
            "vpc_id": "vpc-05002e50491e66495"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630471054272",
            "id": "subnet-05e8b0e64e72c589f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:630471054272:subnet/subnet-0c293e7f95d3256c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c293e7f95d3256c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630471054272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devopsshack-subnet-1"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-1"
            },
            "vpc_id": "vpc-05002e50491e66495"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630471054272",
            "id": "subnet-0c293e7f95d3256c9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devopsshack_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:630471054272:vpc/vpc-05002e50491e66495",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0295fb14ae123266b",
            "default_route_table_id": "rtb-06a2bac25e1b00ca3",
            "default_security_group_id": "sg-09ec8211dd39daae1",
            "dhcp_options_id": "dopt-01b7919328aef42f5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05002e50491e66495",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a2bac25e1b00ca3",
            "owner_id": "630471054272",
            "region": "ap-south-1",
            "tags": {
              "Name": "devopsshack-vpc"
            },
            "tags_all": {
              "Name": "devopsshack-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "630471054272",
            "id": "vpc-05002e50491e66495",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}